# smol-agent

./: .editorconfig  .gitignore  .smol-gang-plan.md  AGENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  EXPLORE-AGENT-FEATURES.md  LICENSE  PLAN.md  README.md  SECURITY.md  eslint.config.js  install.sh  jest.config.js  package-lock.json  package.json  plan.md  pyproject.toml  tsconfig.build.json  tsconfig.json
.github/: ENVIRONMENT_SETUP.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agent/: __init__.py  core.py  events.py
api/: __init__.py  main.py
coverage/: clover.xml  coverage-final.json  lcov.info
docs/: acp-t3code-roadmap.md  cross-agent-communication.md
scripts/: fix_tests.py  generate-benchmark-image.js  prepare-dist.mjs  update-benchmark-readme.js
src/: acp-content.js  acp-server.js  agent-registry.js  agent-registry.ts  agent.js  agent_system_prompt.txt  architect.js  architect.ts  caveman.js  checkpoint.js  checkpoint.ts  constants.ts  context-manager.js  context-summarizer.js  context-summarizer.ts  context-tracker.js  context.js  context.ts  conversation-summarizer.js  cross-agent.js  errors.js  errors.ts  index.js  index.ts  input-parser.js  input-parser.ts  logger.js  logger.ts  lru-tool-cache.js  lru-tool-cache.ts  memory-bank.js  memory-bank.ts  ollama.js  ollama.ts  path-utils.js  path-utils.ts  plan-tracker.js  prehydrate.js  prehydrate.ts  remote-server.js  (+20 more)
src/tools/: git.js  (+56 more)
test/: README.md  markdown-improved-test.js  markdown-test.js
tests/: test_events.py
(+209 files in other folders)
